--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -1611,7 +1611,7 @@
                                 <span style="font-weight: 600;">
                                     💼 Azienda Inserzionista
                                     <small style="display: block; color: #28a745; font-size: 0.85rem; margin-top: 4px;">
-                                        ✅ Compenso: 30€ + 1 punto + MLM
+                                        ✅ Compenso: 30€ + 1 punto
                                     </small>
                                 </span>
                             </label>
