Fix: Mostra compensi €30 in cronologia + traduzione italiana
- Dashboard: aggiunti typeLabels/typeIcons per company_compensation, mlm_compensation_level1/2
- Dashboard: modificato rendering per mostrare €X.XX invece di punti quando compensation_euros > 0
- Dashboard: aggiunto stile .compensation (arancione) per transazioni compenso
- Admin Panel: cambiato 'Iscritta' → 'Approvata' per stato approved
- Database: aggiunto script check_compensation_system.sql per diagnostica
- Docs: creato FIX_COMPENSATION_MLM.md con troubleshooting completo

Il problema era che compensation_euros non esisteva in points_transactions.
Il trigger SQL lo crea automaticamente, ma va rieseguito.

--- a/public/admin-panel.html
+++ b/public/admin-panel.html
@@ -3157,7 +3157,7 @@
             const statusBadges = {
                 pending: '<span class="report-status-badge status-pending">In Attesa</span>',
                 contacted: '<span class="report-status-badge status-contacted">Contattata</span>',
-                approved: '<span class="report-status-badge status-approved">Iscritta</span>',
+                approved: '<span class="report-status-badge status-approved">Approvata</span>',
                 rejected: '<span class="report-status-badge status-rejected">Rifiutata</span>'
             };
 
@@ -3386,7 +3386,7 @@
             const statusBadge = {
                 pending: '<span class="status-badge status-pending">In Attesa</span>',
                 contacted: '<span class="status-badge status-contacted">Contattata</span>',
-                approved: '<span class="status-badge status-approved">Iscritta</span>',
+                approved: '<span class="status-badge status-approved">Approvata</span>',
                 rejected: '<span class="status-badge status-rejected">Rifiutata</span>'
             }[report.status] || report.status;
 
