--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -2190,6 +2190,10 @@
             background: linear-gradient(135deg, #ef4444 0%, #dc2626 100%);
         }
 
+        .modal-transaction-icon.compensation {
+            background: linear-gradient(135deg, #f59e0b 0%, #d97706 100%);
+        }
+
         .modal-transaction-details h4 {
             margin: 0 0 0.25rem 0;
             font-size: 1rem;
@@ -2217,6 +2221,11 @@
         .modal-transaction-points.negative {
             color: #ef4444;
             background: rgba(239, 68, 68, 0.1);
+        }
+
+        .modal-transaction-points.compensation {
+            color: #f59e0b;
+            background: rgba(245, 158, 11, 0.1);
         }
 
         /* Network Tree Styles */
@@ -3073,7 +3082,13 @@
                     report_rejected: 'Segnalazione Rifiutata',
                     reward_redeemed: 'Premio Riscattato',
                     admin_adjustment: 'Aggiustamento Admin',
-                    bonus: 'Bonus'
+                    bonus: 'Bonus',
+                    // Nuovi tipi per company reports
+                    company_report_approved: 'Segnalazione Approvata',
+                    company_report_rejected: 'Segnalazione Rifiutata',
+                    company_compensation: 'Compenso Azienda Inserzionista',
+                    mlm_compensation_level1: 'Compenso Rete MLM - Livello 1',
+                    mlm_compensation_level2: 'Compenso Rete MLM - Livello 2'
                 };
                 
                 const typeIcons = {
@@ -3082,11 +3097,18 @@
                     report_rejected: '❌',
                     reward_redeemed: '🎁',
                     admin_adjustment: '⚙️',
-                    bonus: '🎉'
+                    bonus: '🎉',
+                    // Nuovi tipi per company reports
+                    company_report_approved: '📋',
+                    company_report_rejected: '❌',
+                    company_compensation: '💰',
+                    mlm_compensation_level1: '💸',
+                    mlm_compensation_level2: '💵'
                 };
                 
                 modalContent.innerHTML = transactions.map(tx => {
                     const isPositive = tx.points > 0;
+                    const hasCompensation = tx.compensation_euros && tx.compensation_euros > 0;
                     const date = new Date(tx.created_at).toLocaleDateString('it-IT', {
                         day: '2-digit',
                         month: 'short',
@@ -3098,7 +3120,7 @@
                     return `
                         <div class="transaction-item">
                             <div class="transaction-info">
-                                <div class="transaction-icon ${isPositive ? 'positive' : 'negative'}">
+                                <div class="transaction-icon ${isPositive ? 'positive' : hasCompensation ? 'compensation' : 'negative'}">
                                     ${typeIcons[tx.transaction_type] || '📝'}
                                 </div>
                                 <div class="transaction-details">
@@ -3107,8 +3129,8 @@
                                     <small class="transaction-date">${date}</small>
                                 </div>
                             </div>
-                            <div class="transaction-points ${isPositive ? 'positive' : 'negative'}">
-                                ${isPositive ? '+' : ''}${tx.points}
+                            <div class="transaction-points ${isPositive ? 'positive' : hasCompensation ? 'compensation' : 'negative'}">
+                                ${hasCompensation ? `€${tx.compensation_euros.toFixed(2)}` : `${isPositive ? '+' : ''}${tx.points}`}
                             </div>
                         </div>
                     `;
